--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/icon.ico">
+  <meta name="description" content="Among Us">
+  <meta name="author" content="862368092">
 
-  <title>John Doe - Business Administration</title>
+  <title>Calvin Tat - Business</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Calvin Tat</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/CalvinTat.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,31 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Calvin Tat
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Business Major📚</div>
+        <p class="lead mb-4">Hello, my name is Calvin Tat. I am currently a first year student at University of California, Riverside. I am currently a business major looking to specialize in being a financial
+        analysis. I am a generally responsible and hardworking person. If there is anything I do not know or understand, I am willing to learn in order to help and succeed with whatever project I have been assigned to. 
+        Although I am quite introverted, I am always willing to talk with someone about anything. <br><br>
 
-        Enter bio here<br><br>
+       Although I do not have any work experience at the moment since I have not been looking for any, I am still willingly to take the chance and get a job. I believe I have the skills and
+       qualifications needed in order to not just be a competent employee, but a great one. I am very cooperative and can work in a team effectively, but can also work independently.<br><br>
 
-        Enter bio here
+      My ability to work hard can be seen through my time in my highschool cross country team. I was dedicated and worked extremely hard in the team. I attended practice everyday and made sure
+      I completed our training routine. I worked hard with my team and made it to CIF showing my work paid off. Another demonstration of my ability to work with people is through my volunteer work in 
+      Keyclub and Interact. We would work together and help raise funds and do volunteer work such as marathon runs.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://youtube.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/CalvinTtat">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/OnePieceAnime">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:ctat004@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +97,46 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Athelete</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Cross Country and Track/Field</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Varsity Runner<br> 
+              • CIF Attendee<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">August 2019-May 2022</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Club</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Experience with Redcross, Interact, and Key Club<br>
+              • Communicative and Respectful<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2018 - May 2022</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Gabrielino High School</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped students with process and aplication of algebra and calculus<br>
+            • Reviewed work from students<br>
+            • Worked in small groups under the same problem<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2022 - May 2022</span>
           </div>
         </div>
 
@@ -152,36 +155,12 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Financial Analysis</div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2022 - May 2026</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -191,7 +170,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+              <img src="img/interact.jpg" width="500px">
+              <img src="img/key.png" width="500px"><br>
+              <img src="img/red.jpg" width="500px">
+              <img src="img/cif.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +181,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Calvin Tat</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
